SECIT-33: numeric prefixed app adjuster: added support for app descriptions that contain the separator char
git-svn-id: svn+ssh://svn.blackducksoftware.com/srv/svn/proserv/trunk/cc-importer@5241 90649d4e-7a4c-4683-80da-d44f83f08aad